--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Ollie Bike Sharing</title>
-	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-	<h1>You're Building a Website!</h1>
-</body>
-</html>
+<div id="header"></div>
+<div class="left"></div>
+<div class="stuff">
+  <br><br>
+  <h1>Najib's Professional Resume</h1>
+  <h2>Najib Aden</h2>
+  <hr />
+  <br>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Ability to interact effectively with public & co-workers</li>
+    <li>Strong computer & office equipment skills</li>
+    <li>Fluent in Somali & English</li>
+    <li>Enthusiastic flexible & willing to learn</li>
+    <li>Ability to work independently with minimum supervision</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+    <a href="https://www.hgacademy.org">
+      <li>Higher Ground Academy</li>
+    </a>
+  </ul>
+  <p class="head">Volunteer Experience</p>
+  <ul>
+    <li>•	Successfully launched various youth leadership projects with the Rotary Youth Leadership Awards</li>
+    <li>•	Organized and led plenty of donation drives with different organizations such as Admission Possible and Ka Joog</li>
+    <li>•	Organized social events for at risk youths in poverty stricken neighborhoods</li>
+  </ul>
+</div>
+<div class="right"></div>
+<div id="footer">
+  <h2 id="name">Najib Aden</h2></div>
