--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HTML Resume</title>
+ <link rel="stylesheet" href="style.css"/>
+  </head>
 <div id="header"></div>
 <div class="left"></div>
 <div class="stuff">
@@ -22,9 +28,9 @@
   </ul>
   <p class="head">Volunteer Experience</p>
   <ul>
-    <li>•	Successfully launched various youth leadership projects with the Rotary Youth Leadership Awards</li>
-    <li>•	Organized and led plenty of donation drives with different organizations such as Admission Possible and Ka Joog</li>
-    <li>•	Organized social events for at risk youths in poverty stricken neighborhoods</li>
+    <li>Successfully launched various youth leadership projects with the Rotary Youth Leadership Awards</li>
+    <li>Organized and led plenty of donation drives with different organizations such as Admission Possible and Ka Joog</li>
+    <li>Organized social events for at risk youths in poverty stricken neighborhoods</li>
   </ul>
 </div>
 <div class="right"></div>
